--- a/now.json
+++ b/now.json
@@ -2,6 +2,10 @@
     "name": "meteo",
     "version": 2,
     "builds": [{ "src": "**/*.js", "use": "@now/node" }],
+    "routes": [
+      { "src": "/data", "methods": ["GET"], "dest": "data/getAllDatasets.js" },
+      { "src": "/", "dest": "/index.js" }
+    ],
     "env": {
       "DB_URI": "@db-uri"
     }
