added get and post

--- a/now.json
+++ b/now.json
@@ -1,12 +1,13 @@
 {
-    "name": "meteo",
-    "version": 2,
-    "builds": [{ "src": "**/*.js", "use": "@now/node" }],
-    "routes": [
-      { "src": "/data", "methods": ["GET"], "dest": "data/getAllDatasets.js" },
-      { "src": "/", "dest": "/index.js" }
-    ],
-    "env": {
-      "DB_URI": "@db-uri"
-    }
+  "name": "meteo",
+  "version": 2,
+  "builds": [{ "src": "**/*.js", "use": "@now/node" }],
+  "routes": [
+    { "src": "/data", "methods": ["GET"], "dest": "data/getDatasets.js" },
+    { "src": "/data", "methods": ["POST"], "dest": "data/postDataset.js" },
+    { "src": "/", "dest": "/index.js" }
+  ],
+  "env": {
+    "DB_URI": "@db-uri"
   }
+}
