--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "micro": "^9.3.4",
     "mongodb": "^3.2.7",
     "mongoose": "^5.6.3"
   }
