POST request is checking now if parameters exist. And  can be saved only 4 parameters now

--- a/now.json
+++ b/now.json
@@ -4,7 +4,9 @@
   "builds": [{ "src": "**/*.js", "use": "@now/node" }],
   "routes": [
     { "src": "/data", "methods": ["GET"], "dest": "data/getDatasets.js" },
+    { "src": "/data/", "methods": ["GET"], "dest": "data/getDatasets.js" },
     { "src": "/data", "methods": ["POST"], "dest": "data/postDataset.js" },
+    { "src": "/data/", "methods": ["POST"], "dest": "data/postDataset.js" },
     { "src": "/", "dest": "/index.js" }
   ],
   "env": {
