--- a/now.json
+++ b/now.json
@@ -1,7 +1,7 @@
 {
   "name": "meteo",
   "version": 2,
-  "builds": [{ "src": "**/*.js", "use": "@now/node" }],
+  "builds": [{ "src": "**/*.js", "use": "@now/node@0.11.1" }],
   "routes": [
     { "src": "/data", "methods": ["GET"], "dest": "data/getDatasets.js" },
     { "src": "/data/", "methods": ["GET"], "dest": "data/getDatasets.js" },
