--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "meteo",
   "version": "1.0.0",
-  "description": "",
+  "description": "backend for ardino meteostation",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Aleksandr Nikiforov",
   "license": "ISC",
   "dependencies": {
     "micro-cors": "^0.1.1",
