--- a/now.json
+++ b/now.json
@@ -8,6 +8,7 @@
     { "src": "/", "dest": "/index.js" }
   ],
   "env": {
-    "DB_URI": "@db-uri"
+    "DB_URI": "@db-uri",
+    "MY_KEY": "@my-key"
   }
 }
