--- a/now.json
+++ b/now.json
@@ -3,8 +3,8 @@
   "version": 2,
   "builds": [{ "src": "**/*.js", "use": "@now/node" }],
   "routes": [
-    { "src": "/data", "methods": ["GET"], "dest": "data/getDatasets.js" },
-    { "src": "/data", "methods": ["POST"], "dest": "data/postDataset.js" },
+    { "src": "/data", "methods": ["GET", "OPTIONS"], "dest": "data/getDatasets.js" },
+    { "src": "/data", "methods": ["POST", "OPTIONS"], "dest": "data/postDataset.js" },
     { "src": "/", "dest": "/index.js" }
   ],
   "env": {
