--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,16 @@
 {
   "name": "meteo",
   "builds": [{ "src": "**/*.js", "use": "@vercel/node" }],
-  "routes": [
-    { "src": "/data", "methods": ["GET", "OPTIONS"], "dest": "data/getDatasets.js" },
-    { "src": "/data", "methods": ["POST", "OPTIONS"], "dest": "data/postDataset.js" },
-    { "src": "/", "dest": "/index.js" }
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "access-control-allow-origin",
+          "value": "*"
+        }
+      ]
+    }
   ],
   "env": {
     "DB_URI": "@db-uri",
