--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,10 @@
 {
   "name": "meteo",
   "builds": [{ "src": "**/*.js", "use": "@vercel/node" }],
-  "rewrites": [
-    {
-      "source": "/data",
-      "destination": "/data/getDatasets.js"
-    },
-    {
-      "source": "/",
-      "destination": "/index.js"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        { "key": "Access-Control-Allow-Credentials", "value": "true" },
-        { "key": "Access-Control-Allow-Origin", "value": "*" },
-        { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
-        { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version" }
-      ]
-    }
+  "routes": [
+    {"src": "/data", "methods": ["GET", "OPTIONS"], "dest": "data/getDatasets.js" },
+    { "src": "/data", "methods": ["POST", "OPTIONS"], "dest": "data/postDataset.js" },
+    { "src": "/", "dest": "/index.js" }
   ],
   "env": {
     "DB_URI": "@db-uri",
