--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,26 @@
   "name": "meteo",
   "builds": [{ "src": "**/*.js", "use": "@vercel/node" }],
   "routes": [
-    {"src": "/data", "methods": ["GET", "OPTIONS"], "dest": "data/getDatasets.js" },
-    { "src": "/data", "methods": ["POST", "OPTIONS"], "dest": "data/postDataset.js" },
-    { "src": "/", "dest": "/index.js" }
+    {
+      "src": "/data",
+      "headers": [
+        { "key": "Access-Control-Allow-Credentials", "value": "true" },
+        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
+        { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version" }
+      ],
+      "dest": "data/getDatasets.js"
+    },
+    {
+      "src": "/",
+      "headers": [
+        { "key": "Access-Control-Allow-Credentials", "value": "true" },
+        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
+        { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version" }
+      ],
+      "dest": "/index.js"
+    }
   ],
   "env": {
     "DB_URI": "@db-uri",
